<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="4dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/naming_rules_dialog_title"
        android:paddingLeft="@dimen/dialog_padding"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="#e7120c0c"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/dialog_padding"
        android:paddingLeft="@dimen/dialog_padding"
        android:text="@string/nr_dialog_mg"
        android:textColor="@android:color/holo_red_light"
        android:textSize="12sp"/>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/errorBtnOk"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/o_k" />

    </LinearLayout>

</LinearLayout>